# match_student_code

./: README.md
student_code/: README.md
student_code/000_ExampleFolder/: README.md
student_code/005_FormationLayer/: README.md
student_code/005_FormationLayer/formation_launch/: README.md
student_code/005_FormationLayer/formation_layer/: README.md
student_code/005_Recursive-Least-Squares-Algorithm/: README.md
student_code/005_Recursive-Least-Squares-Algorithm/src/match_mobile_robotics/: README.md
student_code/006_FormationLayer/formation_launch/: README.md
student_code/007_FromPathplanerToBezierSpline/: README.md
student_code/007_Optimization_criteria/: README.md
student_code/007_Optimization_criteria/bachelor_launch/: CMakeLists.txt  README.md  douglas_peucker.launch  goal.launch  package.xml  spline.launch
student_code/007_Optimization_criteria/bachelor_nodes/: CMakeLists.txt  package.xml
student_code/007_Optimization_criteria/bachelor_nodes/src/: b-spline.py  (+2 more)
student_code/007_Optimization_criteria/bachelor_rviz/: CMakeLists.txt  package.xml
student_code/250204_Cable_detection_for_LocalPP/: MODEL_POSE.py  README.md
student_code/250204_Cable_detection_for_LocalPP/Cable_Detection/: MASK_CREATE.py  README.md
student_code/250318_LIO-SAM_MID360_Simulation/: README.md  setup.sh
student_code/250318_LIO-SAM_MID360_Simulation/LIO-SAM-MID360/: CMakeLists.txt  README.md  package.xml
student_code/250318_LIO-SAM_MID360_Simulation/livox_laser_simulation/: CMakeLists.txt  README.md  package.xml
student_code/250318_LIO-SAM_MID360_Simulation/livox_laser_simulation/include/livox_laser_simulation/: livox_points_plugin.h
student_code/250318_LIO-SAM_MID360_Simulation/livox_laser_simulation/launch/: xacro.launch
student_code/250318_LIO-SAM_MID360_Simulation/livox_laser_simulation/models/: mid360 copy.xacro  mid360.xacro
student_code/250318_LIO-SAM_MID360_Simulation/livox_laser_simulation/models/sensors_only/: model.sdf
student_code/250318_LIO-SAM_MID360_Simulation/livox_laser_simulation/src/: livox_points_plugin.cpp
student_code/250318_LIO-SAM_MID360_Simulation/match_mobile_robotics/: README.md  setup_full.sh
student_code/250408_Dynamic_Model_for_mobile_robots/: README.md
student_code/250428_Scan_to_map_localization_Mid360_Simulation/: README.md
student_code/250428_Scan_to_map_localization_Mid360_Simulation/FAST_LIO_LOCALIZATION/: CMakeLists.txt  README.md
student_code/250428_Scan_to_map_localization_Mid360_Simulation/livox_laser_simulation/: CMakeLists.txt  package.xml
student_code/250428_Scan_to_map_localization_Mid360_Simulation/scripts/: boxplots.py  positioningerro_time.py  rotationrpe.py  translationalrpe.py  vel_angularvel_time.py
student_code/250429_real_time_stabilization/: README.md
student_code/250429_real_time_stabilization/imu_compensation/: CMakeLists.txt  package.xml
student_code/250429_real_time_stabilization/pose_change/: CMakeLists.txt  package.xml
student_code/250429_real_time_stabilization/test/: package.xml
student_code/250429_real_time_stabilization/twist_controller/: CMakeLists.txt  package.xml
student_code/251127_print_texture_localization/: README.md
student_code/251127_print_texture_localization/wall_localization_demo/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
student_code/251127_print_texture_localization/wall_localization_demo/config/: estimator_params.yaml  localization_params.yaml  offline_map.yaml
student_code/251127_print_texture_localization/wall_localization_demo/launch/: build_offline_map.launch  run_localization.launch  run_mapping_recording.launch  spawn_world_and_robot.launch
student_code/251127_print_texture_localization/wall_localization_demo/models/printed_wall/: model.config  model.sdf
student_code/251127_print_texture_localization/wall_localization_demo/src/: csv2mesh.py  demo_image.py  generate_mesh.py  record_wall_scan.py  rosbag2csv.py  view_image_npy.py  view_pcl.py
student_code/251127_print_texture_localization/wall_localization_demo/src/wall_localization_demo/: compare_poses.py  localization_core.py  main.py  move_along_wall.py  pcl2texture.py
student_code/251127_print_texture_localization/wall_localization_demo/urdf/: robot_with_scanner.urdf.xacro
student_code/251127_print_texture_localization/wall_localization_demo/worlds/: textured_wall.world
student_code/MID360/: README.md
(+81 files in other folders)
